# http-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md
HttpServer/: CMakeLists.txt  ClientInfo.h  ConnectedSocket.cpp  ConnectedSocket.h  ConnectionServant.cpp  ConnectionServant.h  FileReader.cpp  FileReader.hpp  Helpers.hpp  HtmlDecoder.cpp  HtmlDecoder.hpp  HttpMethod.h  HttpRequest.h  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServerConfiguration.cpp  HttpServerConfiguration.h  ICallback.h  MovableMutex.h  RequestWorker.cpp  RequestWorker.h  Socket.cpp  Socket.h  SocketClientDataReceiver.cpp  SocketClientDataReceiver.h  SocketClientsHolder.cpp  SocketClientsHolder.h  SocketController.cpp  SocketController.h  ThreadPool.cpp  ThreadPool.h  Url.cpp  Url.h  Utils.h  main.cpp
HttpServer/HtmlHeaders/: HeaderReader.h  IHeader.hpp  RequestHeaders.h  TypeMap.h
HttpServer/Observer/: IPublisher.h  ISubscriber.h
HttpServer/SafeQueue/: SafeQueue.h
HttpServer/eventsystem/: ClientConnectedEvent.hpp  ClientDataReceivedEvent.hpp  EventDispatcher.hpp  EventSystem.hpp  IEvent.hpp  IEventListener.hpp
cmake/: TestFiles.cmake
pages/: index.html
tests/: dummyTests.cpp
