# CMakeList.txt : CMake project for HttpServer, include source and define
# project specific logic here.

cmake_minimum_required (VERSION 3.13)

# Add source to this project's executable.
#add_executable (HttpServer "HttpServer.cpp" "HttpServer.h" "main.cpp" "Socket.cpp" "Socket.h")

# TODO: Add tests and install targets if needed.
